wordpress/wordpress-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deploy
  labels:
    app: wordpress-deploy
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 20
  replicas: 2
  selector:
    matchLabels:
      app: wordpress-deploy
  template:
    metadata:
      labels:
        app: wordpress-deploy
    spec:
      containers:
      - image: wordpress
        name: wordpress
        readinessProbe:
          exec:
            command:
              - ls
              - /var/www/html  
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wp-content
          mountPath: /var/www/html
      volumes:
      - name: wp-content
        persistentVolumeClaim:
        - claimName: wordpress-pvc
