wordpress/mariadb-svc-ext-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc-ext-np
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 31112
  selector:
    app: mariadb-rs
