wordpress/wordpress-svc-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc-cluster
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wordpress-deploy
