wordpress/wordpress-svc-ext-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc-ext-np
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31111
  selector:
    app: wordpress-rs
